--- a/src/components/teamMember.scss
+++ b/src/components/teamMember.scss
@@ -5,7 +5,6 @@
 
 .member-image-container__spaced {
   width: 315px;
-  margin-right: 108px;
 }
 
 .member-image {
